# sportnearby-be

./: Dockerfile  README.md  alp.py  api_server.py  combine_scrapers.py  docker-compose.yml  evaluation_results_20250926_200115.json  example_output.json  graph_state.py  llm_client.py  main.py  pyproject.toml  pytest.ini  scrapper.py  scrapper2.py  scrapper4.py  setup_database.py  sports_events.json  test_langsmith.py
app/: __init__.py  api.py  db.py  extractor.py  graph.py  graph_state.py  llm_client.py  main.py  models.py  nodes.py  services.py  settings.py  tools.py
evaluation/: __init__.py  golden_dataset.py  langsmith_evaluator.py  run_evaluation.py
scrappers/: scrapper_men_women_lotto_volleyball.py
