[project]
name = "ai-sports-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg>=3.2.10",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
