[project]
name = "ai-sports-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "langchain[openai]>=0.3.27",
    "langchain-community>=0.3.30",
    "langgraph>=0.6.7",
    "langsmith>=0.4.31",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg>=3.2.10",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
    "langchain-ollama>=0.3.8",
]
